<resources>
    <string name="app_name">LondonQuiz</string>
    <string name="login">Enter your name to start: </string>
    <string name="sub">Submit</string>
    <string name="player_two">Player Two\s turn!</string>
    <string name="skip">Skip</string>
    <string name="player_1">Player One\'s turn!</string>
    <string name="instructions">There will be 4 questions per quiz. If you guess correctly,
        you will earn one point. If you guess incorrectly you will lose one point. You can only
    skip once per quiz, and will earn zero points. You can only cheat once per quiz, and will also
    earn zero points. If you would like to continue taking quizzes, just press the "Next quiz" button. If not, you can simply exit the app.</string>
    <string name="true_button">True</string>
    <string name="player_2">If you are with a buddy and want to see who knows London better, have them play this round and see who can score higher!</string>
    <string name="gotit_button">Got it!</string>
    <string name="false_button">False</string>
    <string name="skip_toast">Skip</string>
    <string name="cheat">Cheat</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="cheat_toast">Here\'s the answer</string>
    <string name="next_button">Next quiz?</string>
    <string name="start_button">Start</string>
    <string name="prev_button">Back</string>
    <string name="question_1">It is illegal to die in the Palace of Westminster.</string>
    <string name="question_2">Big Ben\'s chime is in the key of C.</string>
    <string name="question_3">More than half of the London Underground network
        runs below ground.</string>
    <string name="question_4">Only two Tube stations have all five vowels in their name:
        South Ealing and Mansion House.</string>
    <string name="question_5">Big Ben is the bell, not the clock tower.</string>
    <string name="question_6">The tallest building in London is The Shard London Bridge.</string>
    <string name="question_7">The Shard London Bridge is 300 m tall.</string>
    <string name="question_8">The Queen needs permission to enter the City of London.</string>
    <string name="question_9">The Houses of Parliament has 6 bars within it.</string>
    <string name="question_10">To become a black cab driver, you have to memorize every street.</string>
    <string name="question_11">The Millennium Dome is smaller than the Great Pyriamids of Giza.</string>
    <string name="question_12">London has a little less than 170 museums.</string>
    <string name="question_13">Aldgate station has 1000 bodies buried beneath it.</string>
    <string name="question_14">London has the 2nd most languages spoken.</string>
    <string name="question_15">There are more American Banks in London than in NY.</string>
    <string name="question_16">One in three Londoners are foreign born.</string>
</resources>

